# trpg-discord-bot

./: .env.example  .gitignore  README.md  pyproject.toml  run.cmd
hosts/coc/.github/: copilot-instructions.md
hosts/coc/.github/agents/: coc-keeper.agent.md
hosts/coc/rule/: 00_前言.md  01_介绍.md  02_属性_职业_建卡.md  03_战斗.md  04_战斗规则.md  05_技能.md  06_丧失理智.md  07_译名表.md  08_几点建议.md  09_闹鬼.md  10_夏日怪谭.md  README.md
hosts/dnd/.github/: copilot-instructions.md
hosts/dnd/.github/agents/: dnd-dm.agent.md
hosts/dnd/.github/skills/dnd-beginner/: SKILL.md
hosts/dnd/.github/skills/dnd-beginner/modules/: rmr-rules-part2.md  rmr-rules-part3.md  rmr-rules-part4.md  rmr-rules.md  什麼是-d-d-什麼是-trpg.md  什麼是地下城主-dm.md  六大屬性.md  其他重要規則.md  冒險.md  如何進行角色扮演.md  戰鬥.md  施法.md  狀態效果-conditions.md  給新手玩家的建議.md  角色建立基礎.md  遊戲骰子.md  (+1 more)
hosts/dnd/.github/skills/dnd-character-options/: SKILL.md
hosts/dnd/.github/skills/dnd-core-rules/: SKILL.md
hosts/dnd/.github/skills/dnd-discord-battle-rule/: SKILL.md
hosts/dnd/.github/skills/dnd-dm-guide/: SKILL.md
hosts/dnd/.github/skills/dnd-monsters/: SKILL.md
hosts/dnd/.github/skills/dnd-settings/: SKILL.md
hosts/dnd/rule/: README.md
hosts/dnd/stories/1491088654893056002/: Event.md  README.md  characters.md  chunk1.txt  chunk2.txt  chunk3.txt  chunk4.txt  chunk5.txt  npc.md
models/: XXXXY.txt  bgdia.txt  cm.txt  gistfile1.txt  gos.txt  雪の先.txt
src/bot/: __init__.py  bot.py  config.py  host_loader.py  main.py
src/bot/cogs/: __init__.py  hosting.py
src/bot/copilot/: __init__.py  session_manager.py
src/bot/grok/: __init__.py  client.py
(+219 files in other folders)
